<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rafaeltimbo.appetite.BusinessDetailsActivity">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="205dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true">

            <ImageView
                app:layout_collapseMode="parallax"
                android:id="@+id/details_image"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/food_image_sample_text"
                android:scaleType="centerCrop"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_collapseMode="pin">

            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>



    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:focusableInTouchMode="true"
        android:clipToPadding="false"
        android:id="@+id/detailsScrollView"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/loadingProgress"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="205dp"
                android:padding="50dp"
                android:layout_weight="1" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp">

                    <!--<ImageView-->
                        <!--app:layout_collapseMode="parallax"-->
                        <!--android:id="@+id/details_image"-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="205dp"-->
                        <!--android:layout_marginTop="0dp"-->
                        <!--android:contentDescription="@string/food_image_sample_text"-->
                        <!--android:scaleType="centerCrop"/>-->


                    <TextView
                        android:id="@+id/details_business_name"
                        style="@style/details_businessName" />

                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        tools:context="com.rafaeltimbo.appetite.BusinessListActivity">

                        <TextView
                            android:id="@+id/details_food_category"
                            style="@style/foodCategory"/>

                        <TextView
                            android:id="@+id/details_distance"
                            style="@style/distance" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/details_total_reviews"
                            style="@style/totalReviews" />

                        <TextView
                            android:id="@+id/reviews_postfix_text"
                            android:layout_weight="1"
                            style="@style/reviewsPostfixText"/>

                        <ImageView
                            android:id="@+id/details_imageStar"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/image_margin"

                            />

                    </LinearLayout>



                    <com.google.android.gms.maps.MapView
                        android:id="@+id/businness_map"
                        android:layout_width="match_parent"
                        android:layout_height="119dp">

                    </com.google.android.gms.maps.MapView>
                    <TextView
                        android:id="@+id/details_address"
                        style="@style/details_address" />



                    <android.support.v7.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:orientation="vertical"
                        android:background="@color/mediumBackgroundColor">

                        <TextView
                            android:id="@+id/photo_section_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Photos"
                            android:textSize="20sp"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="3dp"
                            android:textColor="@color/black"/>

                        <android.support.v4.view.ViewPager
                            android:id="@+id/photos_viewpager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            />

                    </android.support.v7.widget.LinearLayoutCompat>

                </LinearLayout>
        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--<ProgressBar-->
        <!--android:id="@+id/loadingProgress"-->
        <!--style="?android:attr/progressBarStyle"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:paddingTop="200dp"-->
        <!--android:layout_marginTop="150dp"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_centerVertical="true" />-->

</android.support.design.widget.CoordinatorLayout>
