...


        </RelativeLayout>

    </LinearLayout>
    <Button
        android:id="@+id/load_more_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:visibility="gone"
        style="@style/button"/>
    </LinearLayout>
</RelativeLayout>

